force-app/main/default/objects/Send_Grid__c/Send_Grid__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global value sendgrid</description>
    <label>Send Grid</label>
</CustomObject>