force-app/main/default/objects/Send_Grid__c/fields/Email_Home_Automation__c.field-meta.xml
<CustomField>
    <fullName>Email_Home_Automation__c</fullName>
    <label>Email Home Automation</label>
    <type>Email</type>
</CustomField>