force-app/main/default/objects/Send_Grid__c/fields/Email_Solar__c.field-meta.xml
<CustomField>
    <fullName>Email_Solar__c</fullName>
    <label>Email Solar</label>
    <type>Email</type>
</CustomField>