force-app/main/default/objects/Send_Grid__c/fields/Email_Water__c.field-meta.xml
<CustomField>
    <fullName>Email_Water__c</fullName>
    <label>Email Water</label>
    <type>Email</type>
</CustomField>