force-app/main/default/objects/Send_Grid__c/fields/Email_Window__c.field-meta.xml
<CustomField>
    <fullName>Email_Window__c</fullName>
    <label>Email Window</label>
    <type>Email</type>
</CustomField>