force-app/main/default/objects/Send_Grid__c/fields/employ_invitationInPersonInterview__c.field-meta.xml
<CustomField>
    <fullName>employ_invitationInPersonInterview__c</fullName>
    <label>employ_invitationInPersonInterview</label>
    <length>100</length>
    <type>Text</type>
</CustomField>