force-app/main/default/objects/Send_Grid__c/fields/employ_phoneInterviewRequest__c.field-meta.xml
<CustomField>
    <fullName>employ_phoneInterviewRequest__c</fullName>
    <label>employ_phoneInterviewRequest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>