force-app/main/default/objects/Send_Grid__c/fields/employ_regretToinform__c.field-meta.xml
<CustomField>
    <fullName>employ_regretToinform__c</fullName>
    <label>employ_regretToinform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>