force-app/main/default/objects/Send_Grid__c/fields/employ_regretToInformInterview__c.field-meta.xml
<CustomField>
    <fullName>employ_regretToInformInterview__c</fullName>
    <label>employ_regretToInformInterview</label>
    <length>100</length>
    <type>Text</type>
</CustomField>