force-app/main/default/objects/Send_Grid__c/fields/employ_requestForReferences__c.field-meta.xml
<CustomField>
    <fullName>employ_requestForReferences__c</fullName>
    <label>employ_requestForReferences</label>
    <length>100</length>
    <type>Text</type>
</CustomField>