force-app/main/default/objects/Send_Grid__c/fields/employ_welcomeAboard__c.field-meta.xml
<CustomField>
    <fullName>employ_welcomeAboard__c</fullName>
    <label>employ_welcomeAboard</label>
    <length>100</length>
    <type>Text</type>
</CustomField>