force-app/main/default/objects/Send_Grid__c/fields/Home_Automation__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation__c</fullName>
    <label>Home Automation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>