force-app/main/default/objects/Send_Grid__c/fields/Solar__c.field-meta.xml
<CustomField>
    <fullName>Solar__c</fullName>
    <label>Solar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>