force-app/main/default/objects/Send_Grid__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water</label>
    <length>100</length>
    <type>Text</type>
</CustomField>