force-app/main/default/objects/Send_Grid__c/fields/Windows__c.field-meta.xml
<CustomField>
    <fullName>Windows__c</fullName>
    <label>Windows</label>
    <length>100</length>
    <type>Text</type>
</CustomField>